﻿[COLOR yellow][B]v3.9.6[/B][/COLOR]
* Change settings default value.
[COLOR yellow][B]v3.9.5[/B][/COLOR]
* Added notification for fault sub event.
[COLOR yellow][B]v3.9.4[/B][/COLOR]
* OpenSubtitles XMLRPC download bug fix.
Might break at end of 2023, migration to new REST API needed:
https://opensubtitles.stoplight.io/docs/opensubtitles-api/e3750fd63a100-getting-started
[COLOR yellow][B]v3.9.3[/B][/COLOR]
* Small [COLOR limegreen][KTUVIT][/COLOR] website code fix.
[COLOR yellow][B]v3.9.2[/B][/COLOR]
* Add obf "write_heb_embedded_taglines_check" function.
[COLOR yellow][B]v3.9.0[/B][/COLOR]
* Remove OpenSubtitles account settings.
[COLOR yellow][B]v3.8.9[/B][/COLOR]
* Rename "כתובית מובנית" to "תרגום מובנה"
[COLOR yellow][B]v3.8.8[/B][/COLOR]
* Smaller [COLOR limegreen][KTUVIT][/COLOR] website code refactor =)
[COLOR yellow][B]v3.8.7[/B][/COLOR]
* Small [COLOR limegreen][KTUVIT][/COLOR] website code refactor
[COLOR yellow][B]v3.8.6[/B][/COLOR]
* BUG FIX - Ktuvit website subtitles search
[COLOR yellow][B]v3.8.5[/B][/COLOR]
* Always trigger autosub, even when replaying the same content.
[COLOR yellow][B]v3.8.4[/B][/COLOR]
* Sort subtitles by Hebrew, English, and then other languages (sorted by langauges internally).
[COLOR yellow][B]v3.8.3[/B][/COLOR]
* Small code refactor. (write_heb_embedded_taglines)
[COLOR yellow][B]v3.8.2[/B][/COLOR]
* Add setting to enable/disable Russian langauge in subtitle search:
[B]הגדרות - שפות - רוסית[/B]
[COLOR yellow][B]v3.8.1[/B][/COLOR]
* Add setting to enable/disable Hebrew langauge in subtitle search:
[B]הגדרות - שפות - עברית[/B]
[COLOR yellow][B]v3.8.0[/B][/COLOR]
* Small autosub-place_sub function code fix (for loop).
[COLOR yellow][B]v3.7.8[/B][/COLOR]
* Fix small error when searching for subtitles from context menu.
[COLOR yellow][B]v3.7.7[/B][/COLOR]
* Small code refactor. (determine_placeHebrewEmbeddedSub function)
[COLOR yellow][B]v3.7.6[/B][/COLOR]